Added Coupon resource which include:  - Coupon table migration  - Coupon data seeder  - Get all coupon API with the Swagger Docs.
