# routes/api.php
@@ -12,11 +12,15 @@ use Illuminate\Http\Request;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-
+// Authorization Resource
 Route::post('/login', 'AuthenticateController@authenticate')->name('login');
 Route::get('/logout', 'AuthenticateController@logout')->name('logout');
 
 Route::group(['middleware' => ['jwt.auth', 'jwt.refresh']], function () {
+	// Product Resource
 	Route::get('/products', 'ProductController@showAll')->name('get-products');
+
+	// Coupon Resource
+	Route::get('/coupons', 'CouponController@showAll')->name('get-coupons');
 });
 
